--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -7,42 +7,44 @@
     <link rel="stylesheet" href="style.css">
     <title>Calculator</title>
 </head>
-<body class="main">
+<body>
+    <div class="main">
     <form name = "form">
-        <input class="text">
+        <input class="texte" name="texte">
     </form>
     <table>
         <tr>
-            <td><input type=button value="%"></td>
-            <td><input type=button value="CE"></td>
-            <td><input type=button value="C"></td>
-            <td><input type=button value="Retour"></td>
+            <td><input class="button" type=button value="%" onclick="inser('%')"></td>
+            <td><input class="button" type=button value="CE"></td>
+            <td><input class="button" type=button value="C"></td>
+            <td><input class="button" type=button value="Retour"></td>
         </tr>
         <tr>
-            <td><input type=button value="7"></td>
-            <td><input type=button value="8"></td>
-            <td><input type=button value="9"></td>
-            <td><input type=button value="*"></td>
+            <td><input class="button" type=button value="7" onclick="inser(7)"></td>
+            <td><input class="button" type=button value="8" onclick="inser(8)"></td>
+            <td><input class="button" type=button value="9" onclick="inser(9)"></td>
+            <td><input class="button" type=button value="*" onclick="inser('*')"></td>
         </tr>
         <tr>
-            <td><input type=button value="4"></td>
-            <td><input type=button value="5"></td>
-            <td><input type=button value="6"></td>
-            <td><input type=button value="-"></td>
+            <td><input class="button" type=button value="4" onclick="inser(4)"></td>
+            <td><input class="button" type=button value="5" onclick="inser(5)"></td>
+            <td><input class="button" type=button value="6" onclick="inser(6)"></td>
+            <td><input class="button" type=button value="-" onclick="inser('-')"></td>
         </tr>
         <tr>
-            <td><input type=button value="1"></td>
-            <td><input type=button value="2"></td>
-            <td><input type=button value="3"></td>
-            <td><input type=button value="+"></td>
+            <td><input class="button" type=button value="1" onclick="inser(1)"></td>
+            <td><input class="button" type=button value="2" onclick="inser(2)"></td>
+            <td><input class="button" type=button value="3" onclick="inser(3)"></td>
+            <td><input class="button" type=button value="+" onclick="inser('+')"></td>
         </tr>
         <tr>
-            <td><input type=button value="/"></td>
-            <td><input type=button value="0"></td>
-            <td><input type=button value=","></td>
-            <td><input type=button value="="></td>
+            <td><input class="button" type=button value="/" onclick="inser('/')"></td>
+            <td><input class="button" type=button value="0" onclick="inser(0)"></td>
+            <td><input class="button" type=button value="," onclick="inser(',')"></td>
+            <td><input class="button" type=button value="="></td>
         </tr>
     </table>
+</div>
 
 
 
