add the function clearForm for the button C and add the function equal for the button (=) in index.html

--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -16,7 +16,7 @@
         <tr>
             <td><input class="button" type=button value="%" onclick="inser('%')"></td>
             <td><input class="button" type=button value="CE"></td>
-            <td><input class="button" type=button value="C"></td>
+            <td><input class="button" type=button value="C" onclick="clearForm()"></td>
             <td><input class="button" type=button value="Retour"></td>
         </tr>
         <tr>
@@ -41,7 +41,7 @@
             <td><input class="button" type=button value="/" onclick="inser('/')"></td>
             <td><input class="button" type=button value="0" onclick="inser(0)"></td>
             <td><input class="button" type=button value="," onclick="inser(',')"></td>
-            <td><input class="button" type=button value="="></td>
+            <td><input class="button" type=button value="=" onclick="equal()"></td>
         </tr>
     </table>
 </div>
