delete every class = input in index.html of Calculator

--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -14,34 +14,34 @@
     </form>
     <table>
         <tr>
-            <td><input class="button" type=button value="%" onclick="inser('%')"></td>
-            <td><input class="button" type=button value="CE"></td>
-            <td><input class="button" type=button value="C" onclick="clearForm()"></td>
-            <td><input class="button" type=button value="Retour"></td>
+            <td><input type=button value="%" onclick="inser('%')"></td>
+            <td><input type=button value="CE"></td>
+            <td><input type=button value="C" onclick="clearForm()"></td>
+            <td><input type=button value="Retour"></td>
         </tr>
         <tr>
-            <td><input class="button" type=button value="7" onclick="inser(7)"></td>
-            <td><input class="button" type=button value="8" onclick="inser(8)"></td>
-            <td><input class="button" type=button value="9" onclick="inser(9)"></td>
-            <td><input class="button" type=button value="*" onclick="inser('*')"></td>
+            <td><input type=button value="7" onclick="inser(7)"></td>
+            <td><input type=button value="8" onclick="inser(8)"></td>
+            <td><input type=button value="9" onclick="inser(9)"></td>
+            <td><input type=button value="*" onclick="inser('*')"></td>
         </tr>
         <tr>
-            <td><input class="button" type=button value="4" onclick="inser(4)"></td>
-            <td><input class="button" type=button value="5" onclick="inser(5)"></td>
-            <td><input class="button" type=button value="6" onclick="inser(6)"></td>
-            <td><input class="button" type=button value="-" onclick="inser('-')"></td>
+            <td><input type=button value="4" onclick="inser(4)"></td>
+            <td><input type=button value="5" onclick="inser(5)"></td>
+            <td><input type=button value="6" onclick="inser(6)"></td>
+            <td><input type=button value="-" onclick="inser('-')"></td>
         </tr>
         <tr>
-            <td><input class="button" type=button value="1" onclick="inser(1)"></td>
-            <td><input class="button" type=button value="2" onclick="inser(2)"></td>
-            <td><input class="button" type=button value="3" onclick="inser(3)"></td>
-            <td><input class="button" type=button value="+" onclick="inser('+')"></td>
+            <td><input type=button value="1" onclick="inser(1)"></td>
+            <td><input type=button value="2" onclick="inser(2)"></td>
+            <td><input type=button value="3" onclick="inser(3)"></td>
+            <td><input type=button value="+" onclick="inser('+')"></td>
         </tr>
         <tr>
-            <td><input class="button" type=button value="/" onclick="inser('/')"></td>
-            <td><input class="button" type=button value="0" onclick="inser(0)"></td>
-            <td><input class="button" type=button value="," onclick="inser(',')"></td>
-            <td><input class="button" type=button value="=" onclick="equal()"></td>
+            <td><input type=button value="/" onclick="inser('/')"></td>
+            <td><input type=button value="0" onclick="inser(0)"></td>
+            <td><input type=button value="," onclick="inser(',')"></td>
+            <td><input type=button value="=" onclick="equal()"></td>
         </tr>
     </table>
 </div>
