add a basic input with id = TextArea in index.html

--- a/Keyboard-Event/index.html
+++ b/Keyboard-Event/index.html
@@ -7,7 +7,7 @@
     <title>Test Keyboard Event</title>
 </head>
 <body>
-    
+    <input type="text" id="TextArea">
     <script src="script.js"></script>
 
 </body>
