add 2 buttons in index.html of setTimout-setInterval

--- a/setTimeout-setInterval/index.html
+++ b/setTimeout-setInterval/index.html
@@ -7,8 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    
-    <script src="script.js"></script>
+    <button onclick="sayHello()">Lancer l'event</button>
+    <button onclick="dontSayHello()">Annuler l'event</button>    
 
+    <script src="script.js"></script>
 </body>
 </html>
