--- a/DOM/index.html
+++ b/DOM/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
     <title>DOM</title>
 </head>
 <body>
+
+    <header>
+        <h1 class="title">Welcome to the test sandbox</h1>
+    </header>
+
+    <div>
+        <p class="firstLoremClass">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, ullam inventore commodi consectetur nulla totam quisquam recusandae voluptatem maxime veniam quae dolorem expedita dolorum accusamus nostrum vero voluptatum labore blanditiis? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi itaque eveniet est molestiae magnam vero quaerat mollitia assumenda necessitatibus velit ab quidem vel, et accusamus beatae? Id qui laudantium fugiat! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam obcaecati, magni id similique, alias quis animi vero corrupti optio earum quia doloribus voluptatibus enim, veniam beatae odit reiciendis laudantium unde.
+        </p>
+
+        <input type="button" value="Valider">
+    </div>
+    
+<p id="firstLoremId">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit sint, molestias natus repudiandae error odio ad facilis quibusdam dignissimos similique esse iure recusandae consectetur quas alias dolores at modi iste?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae hic doloribus veritatis molestiae eius dolore soluta, porro in tempore voluptatum harum voluptatem amet? Consequatur, earum. Ducimus iusto numquam optio maiores Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel maiores nam rerum totam adipisci soluta, iste omnis esse facilis eius, voluptas beatae ea reprehenderit numquam minima dolores cum placeat ratione? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere velit et a distinctio, vitae commodi sint veritatis maiores quibusdam totam. Porro nisi placeat architecto, possimus saepe ipsum sapiente similique velit? Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis natus facilis excepturi assumenda, dolore dicta reprehenderit totam, aspernatur adipisci voluptas eius in exercitationem eaque doloremque ut magnam vel laboriosam accusamus!</p>
+
+
 <script src="script.js"></script>
 </body>
 </html>
