change some class to id in index.html

--- a/DOM/index.html
+++ b/DOM/index.html
@@ -10,11 +10,11 @@
 <body>
 
     <header>
-        <h1 class="title">Welcome to the test sandbox</h1>
+        <h1 id="title">Welcome to the test sandbox</h1>
     </header>
 
-    <div>
-        <p class="firstLoremClass">
+    <div >
+        <p id="testParent">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, ullam inventore commodi consectetur nulla totam quisquam recusandae voluptatem maxime veniam quae dolorem expedita dolorum accusamus nostrum vero voluptatum labore blanditiis? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi itaque eveniet est molestiae magnam vero quaerat mollitia assumenda necessitatibus velit ab quidem vel, et accusamus beatae? Id qui laudantium fugiat! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam obcaecati, magni id similique, alias quis animi vero corrupti optio earum quia doloribus voluptatibus enim, veniam beatae odit reiciendis laudantium unde.
         </p>
 
