--- a/DOM/index.html
+++ b/DOM/index.html
@@ -10,7 +10,10 @@
 <body>
 
     <header>
+        <button onclick="darkMode()">Dark Mode</button>
+        <button id="whiteMode" onclick="whiteMode()">White Mode</button>
         <h1 id="title">Welcome to the sandbox</h1>
+
     </header>
 
     <div >
