add a button with onclick = addDiv() in index.html

--- a/DOM/index.html
+++ b/DOM/index.html
@@ -38,6 +38,7 @@
     <button onclick="changeColor('white')">Text in white</button>
     <button onclick="changeColor('black')">Text in black</button>
 </div>
+<button onclick="addDiv()">Add another Lorem ipsum</button>
 
 <script src="script.js"></script>
 </body>
