add buttons (Commencer le timer with the function Timer() and Pause with the function Pause() ) in index.html

--- a/Timer/index.html
+++ b/Timer/index.html
@@ -7,6 +7,9 @@
     <title>Timer js</title>
 </head>
 <body>
+    <button onclick="Timer()">Commencer le timer</button>
+    <button onclick="Pause()">Pause</button>
+    <p id="timer"></p>
     <script src="script.js"></script>
 </body>
 </html>
