add a button reset in index.html

--- a/Timer/index.html
+++ b/Timer/index.html
@@ -9,6 +9,7 @@
 <body>
     <button onclick="Timer()">Commencer le timer</button>
     <button onclick="Pause()">Pause</button>
+    <button onclick="Reset()">Reset</button>
     <p id="timer"></p>
     <script src="script.js"></script>
 </body>
