--- a/stopWatch/index.html
+++ b/stopWatch/index.html
@@ -4,13 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Timer js</title>
+    <title>stopWatch</title>
 </head>
 <body>
-    <button onclick="Timer()">Commencer le timer</button>
-    <button onclick="Pause()">Pause</button>
-    <button onclick="Reset()">Reset</button>
-    <p id="timer"></p>
+    <header>
+        <h1>StopWatch</h1>
+    </header>
+
+    <div>
+        <button onclick="Timer()">Commencer le timer</button>
+        <button onclick="Pause()">Pause</button>
+        <button onclick="Reset()">Reset</button>
+    </div>
+
+    <p id="timer"> </p>
+        
     <script src="script.js"></script>
 </body>
 </html>
