--- a/stopWatch/index.html
+++ b/stopWatch/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
     <title>stopWatch</title>
 </head>
 <body>
@@ -12,9 +13,9 @@
     </header>
 
     <div>
-        <button onclick="Timer()">Commencer le timer</button>
-        <button onclick="Pause()">Pause</button>
-        <button onclick="Reset()">Reset</button>
+        <button onclick="Timer()" id="start">Commencer le timer</button>
+        <button onclick="Pause()" id="pause">Pause</button>
+        <button onclick="Reset()" id="finish">Reset</button>
     </div>
 
     <p id="timer"> </p>
