Button (Pause) is disabled in index.html of stopWatch

--- a/stopWatch/index.html
+++ b/stopWatch/index.html
@@ -14,7 +14,7 @@
 
     <div>
         <button onclick="Timer()" id="start">Commencer le timer</button>
-        <button onclick="Pause()" id="pause">Pause</button>
+        <button onclick="Pause()" id="pause" disabled>Pause</button>
         <button onclick="Reset()" id="finish">Reset</button>
     </div>
 
