change the name of the function Timer() to Start() in index.html

--- a/stopWatch/index.html
+++ b/stopWatch/index.html
@@ -13,7 +13,7 @@
     </header>
 
     <div>
-        <button onclick="Timer()" id="start">Commencer le timer</button>
+        <button onclick="Start()" id="start">Commencer le chrono</button>
         <button onclick="Pause()" id="pause" disabled>Pause</button>
         <button onclick="Reset()" id="finish">Reset</button>
     </div>
