--- a/Countdown/index.html
+++ b/Countdown/index.html
@@ -7,6 +7,9 @@
     <title>Countdown js</title>
 </head>
 <body>
+<h1>Le décompte prendra fin dans : </h1>
+    <p id="textCountdown"></p>
+
     <script src="script.js"></script>
 </body>
 </html>
