add a H1, 4 buttons, a paragraph with id=roll and a div with id=result in index.html of 421-game

--- a/421-game/index.html
+++ b/421-game/index.html
@@ -8,6 +8,21 @@
     <title>421 game</title>
 </head>
 <body>
+    <h1>
+        421 game
+    </h1>
+
+    <div>
+        <button id="firstThrow">Lancer 1</button>
+        <button id="secondThrow">Lancer 2</button>
+        <button id="thirdThrow">Lancer 3</button>
+    </div>
+
+    <p id="roll"> </p>
+
+    <div id="result"></div>
+
+    <button>Reset</button>
     <script src="script.js"></script>
 </body>
 </html>
