add onclick= for the 3 first button, and add a new button for use every button in the same time in index.html

--- a/421-game/index.html
+++ b/421-game/index.html
@@ -13,11 +13,11 @@
     </h1>
 
     <div>
-        <button id="firstThrow">Lancer 1</button>
-        <button id="secondThrow">Lancer 2</button>
-        <button id="thirdThrow">Lancer 3</button>
+        <button id="firstThrow" onclick="firstButton()">Lancer 1</button>
+        <button id="secondThrow" onclick="secondButton()">Lancer 2</button>
+        <button id="thirdThrow" onclick="thirdButton()">Lancer 3</button>
     </div>
-
+    <p><button onclick="everyButton()">3 lancer en même temps</button></p>
     <p id="roll"> </p>
 
     <div id="result"></div>
