change the onclick to onclick = RandomBtn1, RandomBtn2, RandomBtn3 for the first 3 buttons in index.html

--- a/421-game/index.html
+++ b/421-game/index.html
@@ -13,11 +13,11 @@
     </h1>
 
     <div>
-        <button id="firstThrow" onclick="firstButton()">Lancer 1</button>
-        <button id="secondThrow" onclick="secondButton()">Lancer 2</button>
-        <button id="thirdThrow" onclick="thirdButton()">Lancer 3</button>
+        <button id="firstThrow" onclick="RandomBtn1()">Lancer 1</button>
+        <button id="secondThrow" onclick="RandomBtn2()">Lancer 2</button>
+        <button id="thirdThrow" onclick="RandomBtn3()">Lancer 3</button>
     </div>
-    <p><button onclick="everyButton()">3 lancer en même temps</button></p>
+    <p><button onclick="everyThing()">3 lancer en même temps</button></p>
     <p id="roll"> </p>
 
     <div id="result"></div>
