add the id bigThrow to the button (3 lancer en même temps) in index.html

--- a/421-game/index.html
+++ b/421-game/index.html
@@ -17,7 +17,7 @@
         <button id="secondThrow" onclick="RandomBtn2()">Lancer 2</button>
         <button id="thirdThrow" onclick="RandomBtn3()">Lancer 3</button>
     </div>
-    <p><button onclick="everyThing()">3 lancer en même temps</button></p>
+    <p><button id ="bigThrow" onclick="everyThing()">3 lancer en même temps</button></p>
     <p id="roll"> </p>
 
     <div id="result"></div>
