--- a/421-game/index.html
+++ b/421-game/index.html
@@ -22,7 +22,7 @@
 
     <div id="result"></div>
 
-    <button>Reset</button>
+    <button onclick="reset()">Reset</button>
     <script src="script.js"></script>
 </body>
 </html>
