--- a/Converters/index.html
+++ b/Converters/index.html
@@ -4,9 +4,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Converters</title>
 </head>
 <body>
+    <h1> Convertir des Km en Miles</h1>
+
+    <div>
+        <form>
+            <input type="number" id="KmToMiles">
+            <p id="resultMiles"> </p>   
+        </form>
+
+            <button onclick="getMiles()">envoyer</button>
+    </div>
+
+
     <script src="script.js"></script>
 </body>
 </html>
