add the part Miles to Km in index.html

--- a/Converters/index.html
+++ b/Converters/index.html
@@ -7,18 +7,31 @@
     <title>Converters</title>
 </head>
 <body>
+                    <!-- KM TO MILES -->
+
     <h1> Convertir des Km en Miles</h1>
 
     <div>
         <form>
             <input type="number" id="KmToMiles">
-            <p id="resultMiles"> </p>   
         </form>
-
             <button onclick="getMiles()">envoyer</button>
+            <p id="resultMiles"> </p>  
     </div>
 
+                    <!-- Miles TO MILES -->
+                    
+    <h1> Convertir des Miles en Km</h1>
 
+    <div>
+        <form>
+            <input type="number" id="MilesToKm"> 
+        </form>   
+            <button onclick="getKm()">envoyer</button>
+            <p id="resultKm"> </p>  
+    </div>
+
+    
     <script src="script.js"></script>
 </body>
 </html>
