add the part (Fahrenheit to Celsius and Celsius to Fahrenheit in index.html

--- a/Converters/index.html
+++ b/Converters/index.html
@@ -15,7 +15,7 @@
         <form>
             <input type="number" id="KmToMiles">
         </form>
-            <button onclick="getMiles()">envoyer</button>
+            <button onclick="getMiles()">Envoyer</button>
             <p id="resultMiles"> </p>  
     </div>
 
@@ -27,11 +27,33 @@
         <form>
             <input type="number" id="MilesToKm"> 
         </form>   
-            <button onclick="getKm()">envoyer</button>
+            <button onclick="getKm()">Envoyer</button>
             <p id="resultKm"> </p>  
     </div>
+                    <!-- Fahrenheit to Celsius -->
+                    
+    <h1> Convertir des Fahrenheit en Celsius </h1>
 
-    
+    <div>
+        <form>
+            <input type="number" id="FtoC"> 
+        </form>   
+            <button onclick="getCelsius()">Envoyer</button>
+            <p id="resultCelsius"> </p>  
+    </div>
+
+                    <!-- Celsius to Fahrenheit -->
+
+    <h1> Convertir des Celsius en Fahrenheit </h1>
+
+    <div>
+        <form>
+            <input type="number" id="CtoF"> 
+        </form>   
+            <button onclick="getFahrenheit()">Envoyer</button>
+            <p id="resultFahrenheit"> </p>  
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
