--- a/Converters/index.html
+++ b/Converters/index.html
@@ -13,7 +13,7 @@
             <select id="SelectForm">
                     <option value="ConvertKmToMiles" >Km to Miles</option>
                     <option value="ConvertMilesToKm">Miles to Km</option>
-                    <option value="ConvertFahrenheitToCelsius" selected>Fahrenheit to Celsius</option>
+                    <option value="ConvertFahrenheitToCelsius" >Fahrenheit to Celsius</option>
                     <option value="ConvertCelsiusToFahrenheit">Celsius to Fahrenheit</option>
             </select>
         </p>
