add a list, and a paragraph in index.html of Test

--- a/Test/index.html
+++ b/Test/index.html
@@ -7,7 +7,16 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <ul id="liste">
+        <li>liste 1</li>
+        <li>liste 2</li>
+        <li>liste 3</li>
+        <li>liste 4</li>
+    </ul>
+
+    <p id="firstParagraphe">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid repudiandae sed delectus dignissimos deleniti itaque, commodi quae modi possimus harum corrupti voluptate perspiciatis vel perferendis soluta asperiores rem porro ratione.
+    </p>
     <script src="script.js"></script>
 
 </body>
