--- a/multiplication-table/index.html
+++ b/multiplication-table/index.html
@@ -8,105 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="table1">
-        <button>1x1</button>
-        <button>1x2</button>
-        <button>1x3</button>
-        <button>1x4</button>
-        <button>1x5</button>
-        <button>1x6</button>
-        <button>1x7</button>
-        <button>1x8</button>
-        <button>1x9</button>
-    </div>
-    <div id="table2">
-        <button>2x1</button>
-        <button>2x2</button>
-        <button>2x3</button>
-        <button>2x4</button>
-        <button>2x5</button>
-        <button>2x6</button>
-        <button>2x7</button>
-        <button>2x8</button>
-        <button>2x9</button>
-    </div>
-    <div id="table3">
-        <button>3x1</button>
-        <button>3x2</button>
-        <button>3x3</button>
-        <button>3x4</button>
-        <button>3x5</button>
-        <button>3x6</button>
-        <button>3x7</button>
-        <button>3x8</button>
-        <button>3x9</button>
-    </div>
-    <div id="table4">
-        <button>4x1</button>
-        <button>4x2</button>
-        <button>4x3</button>
-        <button>4x4</button>
-        <button>4x5</button>
-        <button>4x6</button>
-        <button>4x7</button>
-        <button>4x8</button>
-        <button>4x9</button>
-    </div>
-    <div id="table5">
-        <button>5x1</button>
-        <button>5x2</button>
-        <button>5x3</button>
-        <button>5x4</button>
-        <button>5x5</button>
-        <button>5x6</button>
-        <button>5x7</button>
-        <button>5x8</button>
-        <button>5x9</button>
-    </div>
-    <div id="table6">
-        <button>6x1</button>
-        <button>6x2</button>
-        <button>6x3</button>
-        <button>6x4</button>
-        <button>6x5</button>
-        <button>6x6</button>
-        <button>6x7</button>
-        <button>6x8</button>
-        <button>6x9</button>
-    </div>
-    <div id="table7">
-        <button>7x1</button>
-        <button>7x2</button>
-        <button>7x3</button>
-        <button>7x4</button>
-        <button>7x5</button>
-        <button>7x6</button>
-        <button>7x7</button>
-        <button>7x8</button>
-        <button>7x9</button>
-    </div>
-    <div id="table8">
-        <button>8x1</button>
-        <button>8x2</button>
-        <button>8x3</button>
-        <button>8x4</button>
-        <button>8x5</button>
-        <button>8x6</button>
-        <button>8x7</button>
-        <button>8x8</button>
-        <button>8x9</button>
-    </div>
-    <div id="table9">
-        <button>9x1</button>
-        <button>9x2</button>
-        <button>9x3</button>
-        <button>9x4</button>
-        <button>9x5</button>
-        <button>9x6</button>
-        <button>9x7</button>
-        <button>9x8</button>
-        <button>9x9</button>
-    </div>
+    <table id="table">
+
+    </table>
     <script src="script.js"></script>
 </body>
 </html>
