--- a/multiplication-table/index.html
+++ b/multiplication-table/index.html
@@ -8,7 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-    <table id="table">
+    <h1>Table de 1 à 9 :</h1>
+    <table id="Table">
 
     </table>
     <script src="script.js"></script>
