delete onclick='' for each button in index.html of StopWatch

--- a/stopWatch/index.html
+++ b/stopWatch/index.html
@@ -13,9 +13,9 @@
     </header>
 
     <div>
-        <button onclick="Start()" id="start">Commencer le chrono</button>
-        <button onclick="Pause()" id="pause" disabled>Pause</button>
-        <button onclick="Reset()" id="finish">Reset</button>
+        <button id="start">Commencer le chrono</button>
+        <button id="pause" disabled>Pause</button>
+        <button id="finish">Reset</button>
     </div>
 
     <p id="timer"> </p>
