add a h1, and 3 inputs in index.html

--- a/pay-the-bill/index.html
+++ b/pay-the-bill/index.html
@@ -8,6 +8,31 @@
     <title>Pay the bill</title>
 </head>
 <body>
+    <main>
+        <h1>
+            Pay the bill
+        </h1>
+
+            <p>
+                <label for="price">Coût (en euros):</label>
+                <input type="number" id="price">
+            </p>
+
+            <p>
+                <label for="tva">TVA (en %):</label>
+                <input type="number" id="tva">
+            </p>
+
+            <p>
+                <label for="people">Nombre de personne :</label>
+                <input type="number" id="people">
+            </p>
+
+            <p id="result">
+
+            </p>
+    </main>
+
     <script src="script.js"></script>
 </body>
 </html>
