--- a/pay-the-bill/index.html
+++ b/pay-the-bill/index.html
@@ -28,6 +28,7 @@
                 <input type="number" id="people">
             </p>
 
+            <button onclick="send()">Envoyer</button>
             <p id="result">
 
             </p>
