--- a/pay-the-bill/index.html
+++ b/pay-the-bill/index.html
@@ -20,12 +20,12 @@
 
             <p>
                 <label for="tva">TVA (en %):</label>
-                <input type="number" id="tva">
+                <input type="number" id="tva" value="20">
             </p>
 
             <p>
                 <label for="people">Nombre de personne :</label>
-                <input type="number" id="people">
+                <input type="number" id="people" value="1">
             </p>
 
             <button onclick="send()">Envoyer</button>
