--- a/pay-the-bill/index.html
+++ b/pay-the-bill/index.html
@@ -14,17 +14,17 @@
         </h1>
 
             <p>
-                <label for="price">Coût (en euros):</label>
+                <label for="price" id="labelPrice">Coût (en euros):</label>
                 <input type="number" id="price">
             </p>
 
             <p>
-                <label for="tva">TVA (en %):</label>
+                <label for="tva" id="labelTVA">TVA (en %):</label>
                 <input type="number" id="tva" value="20">
             </p>
 
             <p>
-                <label for="people">Nombre de personne :</label>
+                <label for="people" id="labelPeople">Nombre de personne :</label>
                 <input type="number" id="people" value="1">
             </p>
 
