add a h1, an input with the id pseudo and a button in index.html

--- a/game-1v1-2D/index.html
+++ b/game-1v1-2D/index.html
@@ -8,7 +8,14 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Accueil</h1>
+
+    <label for="pseudo">Pseudo : </label>
+    <input id="pseudo">
+
+    <button>Jouer</button>
+
+
     <script src="script.js"></script>
 </body>
 </html>
