add the function redirection() in the button Jouer in index.html

--- a/game-1v1-2D/index.html
+++ b/game-1v1-2D/index.html
@@ -13,7 +13,7 @@
     <label for="pseudo">Pseudo : </label>
     <input id="pseudo">
 
-    <button>Jouer</button>
+    <button onclick="redirection()">Jouer</button>
 
 
     <script src="script.js"></script>
