--- a/game-1v1-2D/Game/game.html
+++ b/game-1v1-2D/Game/game.html
@@ -10,19 +10,21 @@
 <body>
 
     <h1 id="firstTitle">Le joueur 1 commence.</h1>
-    
+
     <div id="player1">
         <p class="life"></p>
-        <button>Attaque rapide</button>
-        <button>Attaque lente</button>
-        <button>Heal</button>
+        <button onclick="quickAttack()">Attaque rapide</button>
+        <button onclick="slowAttack()">Attaque lente</button>
+        <button onclick="heal()">Heal</button>
     </div>
 
     <div id="player2">
         <p class="life"></p>
-        <button>Attaque rapide</button>
-        <button>Attaque lente</button>
-        <button>Heal</button>
+        <button onclick="quickAttack()">Attaque rapide</button>
+        <button onclick="slowAttack()">Attaque lente</button>
+        <button onclick="heal()">Heal</button>
     </div>
+
+    <script src="../script.js"></script>
 </body>
 </html>
