change the link for the firstPlayer.js in index.html and game.html

--- a/game-1v1-2D/Game/game.html
+++ b/game-1v1-2D/Game/game.html
@@ -12,19 +12,19 @@
     <h1 id="firstTitle">Le joueur 1 commence.</h1>
 
     <div id="player1">
-        <p class="life"></p>
-        <button onclick="quickAttack()">Attaque rapide</button>
-        <button onclick="slowAttack()">Attaque lente</button>
-        <button onclick="heal()">Heal</button>
+        <p class="life" id="showLifeP1"></p>
+        <button onclick="quickAttackP1()">Attaque rapide</button>
+        <button onclick="slowAttackP1()">Attaque lente</button>
+        <button onclick="healP1()">Heal</button>
     </div>
 
     <div id="player2">
-        <p class="life"></p>
-        <button onclick="quickAttack()">Attaque rapide</button>
-        <button onclick="slowAttack()">Attaque lente</button>
-        <button onclick="heal()">Heal</button>
+        <p class="life" id="showLifeP2"></p>
+        <button onclick="quickAttackP2()">Attaque rapide</button>
+        <button onclick="slowAttackP2()">Attaque lente</button>
+        <button onclick="healP2()">Heal</button>
     </div>
 
-    <script src="../script.js"></script>
+    <script src="../js/firstPlayer.js"></script>
 </body>
 </html>
