--- a/game-1v1-2D/index.html
+++ b/game-1v1-2D/index.html
@@ -16,6 +16,6 @@
     <button onclick="redirection()">Jouer</button>
 
 
-    <script src="script.js"></script>
+    <script src="js/firstPlayer.js"></script>
 </body>
 </html>
