add a link to secondPlayer.js in index.html and game.html

--- a/game-1v1-2D/Game/game.html
+++ b/game-1v1-2D/Game/game.html
@@ -26,5 +26,6 @@
     </div>
 
     <script src="../js/firstPlayer.js"></script>
+    <script src="../js/secondPlayer.js"></script>
 </body>
 </html>
