--- a/game-1v1-2D/Game/game.html
+++ b/game-1v1-2D/Game/game.html
@@ -25,6 +25,7 @@
         <button onclick="healP2()">Heal</button>
     </div>
 
+    <script src="../js/script.js"></script>
     <script src="../js/firstPlayer.js"></script>
     <script src="../js/secondPlayer.js"></script>
 </body>
