--- a/game-1v1-2D/index.html
+++ b/game-1v1-2D/index.html
@@ -15,8 +15,6 @@
 
     <button onclick="redirection()">Jouer</button>
 
-
-    <script src="js/firstPlayer.js"></script>
-    <script src="js/secondPlayer.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
