--- a/game-1v1-2D/Game/game.html
+++ b/game-1v1-2D/Game/game.html
@@ -13,16 +13,20 @@
 
     <div id="player1">
         <p class="life" id="showLifeP1"></p>
-        <button onclick="quickAttackP1()">Attaque rapide</button>
-        <button onclick="slowAttackP1()">Attaque lente</button>
-        <button onclick="healP1()">Heal</button>
+        <button onclick="quickAttackP1()" id="disabledQuickAttackP1">Attaque rapide</button>
+        <button onclick="slowAttackP1()" id="disabledSlowAttackP1">Attaque lente</button>
+        <button onclick="healP1()" id="disabledHealP1">Heal</button>
     </div>
 
     <div id="player2">
         <p class="life" id="showLifeP2"></p>
-        <button onclick="quickAttackP2()">Attaque rapide</button>
-        <button onclick="slowAttackP2()">Attaque lente</button>
-        <button onclick="healP2()">Heal</button>
+        <button onclick="quickAttackP2()" id="disabledQuickAttackP2">Attaque rapide</button>
+        <button onclick="slowAttackP2()" id="disabledSlowAttackP2">Attaque lente</button>
+        <button onclick="healP2()" id="disabledHealP2">Heal</button>
+    </div>
+
+    <div>
+        <p id="result"></p>
     </div>
 
     <script src="../js/script.js"></script>
