add a button reset with onclick = reset() in game.html

--- a/game-1v1-2D/Game/game.html
+++ b/game-1v1-2D/Game/game.html
@@ -28,6 +28,9 @@
     <div>
         <p id="result"></p>
     </div>
+    <div>
+        <button onclick="reset()">Reset</button>
+    </div>
 
     <script src="../js/script.js"></script>
     <script src="../js/firstPlayer.js"></script>
