--- a/game-1v1-2D/Game/game.html
+++ b/game-1v1-2D/Game/game.html
@@ -12,10 +12,12 @@
     <h1 id="firstTitle">Le joueur 1 commence.</h1>
 
     <div id="player1">
+        <p id="pseudoP1"></p>
         <p class="life" id="showLifeP1"></p>
         <button onclick="quickAttackP1()" id="disabledQuickAttackP1">Attaque rapide</button>
         <button onclick="slowAttackP1()" id="disabledSlowAttackP1">Attaque lente</button>
         <button onclick="healP1()" id="disabledHealP1">Heal</button>
+        <button onclick="exec()" id="buttonExecution"disabled>Execution</button>
     </div>
 
     <div id="player2">
