in index.html :arrow_right: add paragraph with id totalResult... in script.js :arrow_right:  add a getElementById for totalResult + display the total with a text at line 47/48.

--- a/pay-the-bill/index.html
+++ b/pay-the-bill/index.html
@@ -29,9 +29,10 @@
             </p>
 
             <button onclick="send()">Envoyer</button>
-            <p id="result">
+            
+            <p id="totalResult"></p>
 
-            </p>
+            <p id="result"></p>
     </main>
 
     <script src="script.js"></script>
