--- a/Le-juste-nombre/index.html
+++ b/Le-juste-nombre/index.html
@@ -8,6 +8,14 @@
     <title>Le juste nombre</title>
 </head>
 <body>
+    <h1>Le juste nombre</h1>
+
+    <form>
+        <input type="text" id="number">
+        <button>Submit</button>
+    </form>
+
+    <p id="result"></p>
     <script src="script.js"></script>
 </body>
 </html>
