create the function showResult, with a verification if  the current number is > || < || == than the random number

--- a/Le-juste-nombre/index.html
+++ b/Le-juste-nombre/index.html
@@ -12,7 +12,7 @@
 
     <form>
         <input type="text" id="number">
-        <button>Submit</button>
+        <button onclick="showResult()">Submit</button>
     </form>
 
     <p id="result"></p>
