--- a/game-1v1-2D/Game/game.html
+++ b/game-1v1-2D/Game/game.html
@@ -14,6 +14,7 @@
     <div id="player1">
         <p id="pseudoP1"></p>
         <p class="life" id="showLifeP1"></p>
+        <p class="mana" id="showManaP1"></p>
         <button onclick="quickAttackP1()" id="disabledQuickAttackP1">Attaque rapide</button>
         <button onclick="slowAttackP1()" id="disabledSlowAttackP1">Attaque lente</button>
         <button onclick="healP1()" id="disabledHealP1">Heal</button>
@@ -22,6 +23,7 @@
 
     <div id="player2">
         <p class="life" id="showLifeP2"></p>
+        <p class="mana" id="showManaP2"></p>
         <button onclick="quickAttackP2()" id="disabledQuickAttackP2">Attaque rapide</button>
         <button onclick="slowAttackP2()" id="disabledSlowAttackP2">Attaque lente</button>
         <button onclick="healP2()" id="disabledHealP2">Heal</button>
